Add most important facts to story line.

--- a/src/templatefiles/templates/dnd/concrete/characters/Rafana+lady-of-the-pink-tree.html
+++ b/src/templatefiles/templates/dnd/concrete/characters/Rafana+lady-of-the-pink-tree.html
@@ -1,1 +1,9 @@
 <p>Horny adventurers get -2 on Will saves</p>
+
+<p>Legend lore:</p>
+<ul>
+    <li>She is a Lady of the Pink Tree</li>
+    <li>Has become very lonely and moved to the city</li>
+    <li>Now wants to move her tree with her</li>
+    <li>Has significant Telepath abilities</li>
+</ul>
