--- a/src/templatefiles/templates/dnd/concrete/obstacles/03-poor-life-in-Yauhnn/00-exploring-the-city.html
+++ b/src/templatefiles/templates/dnd/concrete/obstacles/03-poor-life-in-Yauhnn/00-exploring-the-city.html
@@ -18,6 +18,10 @@
         She hopes to speak tomorrow when you are more familiar with the city and she has done her prayers.
     </p>
 
+    <p>
+        When paying something in the city there is a 60% change that they get back Waukeen coins (illusionary gold).
+    </p>
+
 {% endblock %}
 
 {% block locations %}
