--- a/src/templatefiles/templates/dnd/concrete/obstacles/03-poor-life-in-Yauhnn/03-first-night-in-town.html
+++ b/src/templatefiles/templates/dnd/concrete/obstacles/03-poor-life-in-Yauhnn/03-first-night-in-town.html
@@ -2,6 +2,7 @@
 
 {% block title %}First Night In Town{% endblock %}
 {% block summary %}Adventurers get a sense of the nightlife in Yauhnn{% endblock %}
+{% block todo %}See Hulorn with his mistress{% endblock %}
 
 {% block events %}
     <p>no events</p>
