--- a/src/templatefiles/templates/dnd/concrete/obstacles/03-poor-life-in-Yauhnn/04-opening-of-the-market.html
+++ b/src/templatefiles/templates/dnd/concrete/obstacles/03-poor-life-in-Yauhnn/04-opening-of-the-market.html
@@ -1,5 +1,6 @@
 <p>Hulorn speaks at opening ritual</p>
 <p>Speech about leveraging wealth</p>
+<p>Body language may reveal Hulorn love for another woman.</p>
 
 <p>Pomin as illusionist service</p>
 <p>Rafana sells perfumes and asks for a job.</p>
