--- a/src/templatefiles/templates/dnd/concrete/obstacles/03-poor-life-in-Yauhnn/A0-fish-monopoly.html
+++ b/src/templatefiles/templates/dnd/concrete/obstacles/03-poor-life-in-Yauhnn/A0-fish-monopoly.html
@@ -10,6 +10,7 @@
 Discovering Thekesh/Moltabar. What is the way in for these facts? Which leads are there besides Waukeen investigation? Are there prepurcosions to disabling fish market
 * Wear the magic neckless of Thekesh
 * Moltabar smells of the slums (a mixture of rotting fish and dried sweat)
+* Houses owned by Thekesh are nothing but storage and are on paper owned by Morabar.
 
 Thekesh gets incriminated by Waukeen and by Oracle as a traitor.
 
