--- a/src/templatefiles/templates/dnd/concrete/obstacles/03-poor-life-in-Yauhnn/A8-interrogation.html
+++ b/src/templatefiles/templates/dnd/concrete/obstacles/03-poor-life-in-Yauhnn/A8-interrogation.html
@@ -1,1 +1,4 @@
-<p>Thekesh earned most money with mithral smuggle</p>
+<p>Thekesh earned most money with mithral smuggle.</p>
+<p>There is more leverage of money than the wealth would normally allow.</p>
+<p>Morabar sold mithral at a low price, because he dogded Waukeen church.</p>
+<p>Openly predicts a monopoly</p>
