--- a/src/templatefiles/templates/dnd/concrete/obstacles/04-respectable-citizens/the-secret-ritual.html
+++ b/src/templatefiles/templates/dnd/concrete/obstacles/04-respectable-citizens/the-secret-ritual.html
@@ -3,6 +3,7 @@
 {% block content %}
     <p>Does Pomin point out the ritual to them? Does he get his info from Rafana?</p>
     <p>When hearing the following the adventurers know that Talos intervened.</p>
+    <p>When seeing Hulorn change into Lokahmee, they connect insignia of the crazy half-elf with Lokahmee.</p>
 
     <p>L: It failed</p>
     <p>O: What?! It failed again?!</p>
