--- a/src/templatefiles/templates/dnd/concrete/obstacles/04-respectable-citizens/worried-about-hulorn.html
+++ b/src/templatefiles/templates/dnd/concrete/obstacles/04-respectable-citizens/worried-about-hulorn.html
@@ -1,2 +1,5 @@
-<p>Otalan doesn't trust his old friend any more.</p>
-<p>Lokahmee's familiar will help</p>
+<p>Otalan doesn't trust his old friend any more. Neither does his wife.</p>
+<p>Old Hulorn would have feared Waukeen's wrath.</p>
+<p>Lokahmee's familiar will help. Knows about Olivet f*cking his masters love.</p>
+
+<p>Waukeen temple doesn't act against FTG because that would hurt the community</p>
