--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/residence-district/outside-the-walls.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/residence-district/outside-the-walls.html
@@ -8,7 +8,7 @@
 {% endblock %}
 
 {% block locations %}
-    <p>no locations</p>
+    <p>This area should breath the atmosphere of Almere.</p>
 {% endblock %}
 
 {% block achievements %}
