--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/temple-of-Waukeen.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/temple-of-Waukeen.html
@@ -62,13 +62,17 @@
             A society blooms if it has a lot of money and her followers try to make as much of it as possible.
         </dd>
         <dd>
-            15 >= A controversial aspect of Waukeen is that she creates money out of nothing for the sake of abundance.
-            Giving people without capital a loan will give them a better life and stimulate the community.
-            Another thing that raises eye brows left and right is that she facilitates illegal trade as much as legal trade.
+            13 >= Goddess creates money with a Holy donkey that shits gold when you pull his tail.
+            This money will allow everybody to become rich and enjoy life.
         </dd>
         <dd>
-            20 >= Recently got back from being held prisoner in mortal form by Graz'zt.
+            15 >= Recently got back from being held prisoner in mortal form by Graz'zt.
             Another enemy in the pantheon is Mask.
+        </dd>
+        <dd>
+            20 >= A controversial aspect of Waukeen is that she creates money out of nothing for the sake of abundance.
+            Giving people without capital a loan will give them a better life and stimulate the community.
+            Another thing that raises eye brows left and right is that she facilitates illegal trade as much as legal trade.
         </dd>
     </dl>
 {% endblock %}
