--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/the-guilds.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/the-guilds.html
@@ -77,6 +77,25 @@
     </dl>
 
     <dl class="dc">
+        <dt>GatherDC: (merchant rumors)</dt>
+        <dd>10 >= Elves are a bunch of low-life tree huggers, standing in the way of progress.</dd>
+        <dd>15 >= Cormyr has a ridiculous tax system.</dd>
+        <dd>15 >= City is trying to make the slums a nice area. Hopefully that terrible smell will disappear together with the Locathah.</dd>
+        <dd>18 >= Olivet is fucking his own sister.</dd>
+        <dd>18 >= Olivets sister is sharing the bed with married Hulorn.</dd>
+        <dd>20 >= Red Whizard of Thay are planning to take over trade in magic.</dd>
+    </dl>
+
+    <dl class="dc">
+        <dt>LocalDC: (about Olivet)</dt>
+        <dd>10 >= Owner of Faerun Magic shops.</dd>
+        <dd>13 >= Lives on a ship in the harbor.</dd>
+        <dd>15 >= Part of the city council of merchants.</dd>
+        <dd>15 >= Has a sister that sells perfumes.</dd>
+        <dd>18 >= Is an important player in Faerun Trade Group.</dd>
+    </dl>
+
+    <dl class="dc">
         <dt>LocalDC: (Sembia)</dt>
         <dd>10 >= Cormyr doesn't put a high tax on its citizens, but do tax import heavily, which is bad for Sembian merchants.</dd>
     </dl>
