--- a/src/templatefiles/templates/dnd/concrete/obstacles/03-poor-life-in-Yauhnn/D1-mirika-snaps-back.html
+++ b/src/templatefiles/templates/dnd/concrete/obstacles/03-poor-life-in-Yauhnn/D1-mirika-snaps-back.html
@@ -15,5 +15,6 @@ Discovers something fun about slums (like the children?)
 How do the adventurers make the connection that Mirika needs to talk to her father to break his love?
 How did Mirika get close to her father to begin with?
 Mirika stats!
+Mirika handout! (should also function as her diary)
 
 </pre>
