Fix some impurities.

--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/temple-of-Waukeen.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/temple-of-Waukeen.html
@@ -55,7 +55,7 @@
 
 {% block knowledges %}
     <dl class="dc">
-        <dt>ReligionDC || GatherDC: (Waukeen)</dt>
+        <dt>GatherDC: (learn about Waukeen)</dt>
         <dd>
             10 >= Goddess of trade and the marketplace.
             She loves money for all the things that you can do with it.
