Fix small errors.

--- a/src/templatefiles/templates/dnd/concrete/monsters/Formian+tainted-myrmarch.html
+++ b/src/templatefiles/templates/dnd/concrete/monsters/Formian+tainted-myrmarch.html
@@ -1,7 +1,7 @@
 {% extends "dnd/abstract/game_character.html" %}
 {% load staticfiles %}
 
-{% block name %}Formian tainted worker{% endblock %}
+{% block name %}Formian tainted myrmarch{% endblock %}
 {% block summary %}Inhabitant of Big Ant Island. Leaders of the pack after the Queen{% endblock %}
 {% block motivation %}
     <p>Wants to do whatever is best for the Hive. Which is often more power for himself.</p>
