--- a/src/templatefiles/templates/dnd/concrete/monsters/Formian+tainted-warrior.html
+++ b/src/templatefiles/templates/dnd/concrete/monsters/Formian+tainted-warrior.html
@@ -1,7 +1,7 @@
 {% extends "dnd/abstract/game_character.html" %}
 {% load staticfiles %}
 
-{% block name %}Formian tainted worker{% endblock %}
+{% block name %}Formian tainted warrior{% endblock %}
 {% block summary %}Inhabitant of Big Ant Island. Mostly stay close to the Hive to defend it.{% endblock %}
 {% block motivation %}
     <p>Defend the Hive and its interests at all cost until death.</p>
