--- a/src/templatefiles/templates/dnd/concrete/obstacles/01-born-again/05-enlightenment.html
+++ b/src/templatefiles/templates/dnd/concrete/obstacles/01-born-again/05-enlightenment.html
@@ -24,7 +24,7 @@
 {% endblock %}
 
 {% block conditions %}
-    <p>no conditions</p>
+    <p>Evil is dense around the vessel (<a href="../../places/big-ant-island/overview.html">reroll taints</a>)</p>
 {% endblock %}
 
 {% block knowledges %}
