--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/sea.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/sea.html
@@ -15,6 +15,11 @@
 
 {% block locations %}
 
+    <p><b>
+        From the sea Yauhnn looks very impressive. There are boats everywhere. The city consists of tiers.
+        The further up you go the richer the houses look. One area very near the docks also looks expensive though.
+    </b></p>
+
     <p>When on the sea around Yauhnn. There are a few ways to get to mainland</p>
     <ul>
         <li>The <a href="slums-district/breakers-slums.html">breaker slums</a> is toughest area to get to land and will lead to stranding.</li>
