--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/breakers-slums.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/breakers-slums.html
@@ -3,10 +3,6 @@
 {% block title %}Breakers slums{% endblock %}
 {% block summary %}Poorest area in whole of Yauhnn. Kids like to play around the pool.{% endblock %}
 
-{% block todo %}
-Locathah stats
-{% endblock %}
-
 {% block events %}
     <h4>During the day</h4>
     <ul>
@@ -88,10 +84,10 @@ Locathah stats
        <dd>12 >= sincere worry about the future of their children.
             Living in poverty is hard.
             They see how other children are suffering from the work they have to do.
-            Someone like <a href="/dnd/characters/Thekesh-Moltabar.html">Thekesh</a> was able to have a better life
+            Someone like <a href="../../../characters/Thekesh-Moltabar+naieve-entrepeneur.html">Thekesh</a> was able to have a better life
        </dd>
        <dd>15 >= children job is to put metal inside of rotten fish with their small fingers</dd>
-       <dd>18 >= children work in secret for <a href="/dnd/characters/Thekesh-Moltabar.html">Thekesh</a></dd>
+       <dd>18 >= children work in secret for <a href="../../../characters/Thekesh-Moltabar+naieve-entrepeneur.html">Thekesh</a></dd>
     </dl>
     <p>Children mothers inside caring for crying children</p>
     <dl class="dc">
@@ -106,7 +102,7 @@ Locathah stats
        <dd>10 < children were playing (retry allowed)</dd>
        <dd>10 >= children suffer injuries when working, but they badly need money, because Moltabar doesn't pay enough.</dd>
        <dd>15 >= the children job is to put metal inside of rotten fish with their small fingers</dd>
-       <dd>18 >= children secretly work for <a href="/dnd/characters/Thekesh-Moltabar.html">Thekesh</a></dd>
+       <dd>18 >= children secretly work for <a href="../../../characters/Thekesh-Moltabar+naieve-entrepeneur.html">Thekesh</a></dd>
     </dl>
 
     <dl class="dc">
