--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/harbor-slums.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/harbor-slums.html
@@ -12,6 +12,12 @@
 {% endblock %}
 
 {% block locations %}
+    <p><b>
+        A very poor part of the city. The houses were once constructed fairly well,
+        but due to the lack of maintenance the houses look shabby.
+        Trash from unloading ships lies around everywhere. There is also a faint smell of rotting fish.
+    </b></p>
+
     <p>From here adventurers can visit</p>
     <ul>
         <li>Walk towards the docks for <a href="../trade-district/temple-of-Waukeen.html">Waukeen temple</a></li>
