--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/temple-of-Talos.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/temple-of-Talos.html
@@ -5,7 +5,7 @@
 
 {% block events %}
     <h4>First time</h4>
-    <p>When entering for the first time (through temple of Valkur)</p>
+    <p>When entering for the first time (through temple of Valkur), roll initiative and draw out the following situation.</p>
     <ol>
         <li>Adventures enter through curtains to a bigger cave.</li>
         <li>Two half-Locathah are in a bloody fist fight right in front of their noses.</li>
