--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/temple-of-Valkur.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/temple-of-Valkur.html
@@ -18,6 +18,11 @@
 {% endblock %}
 
 {% block locations %}
+    <p><b>
+        The door to this lighthouse is open. Inside you see a few benches and an alter.
+        To the right there are stairs leading up to the next floor.
+    </b></p>
+
     <p>The lighthouse/temple consists of</p>
     <ul>
         <li>Ground floor a place for prayer (always open).</li>
@@ -38,7 +43,7 @@
 
 {% block knowledges %}
     <dl class="dc">
-        <dt>ReligionDC: (Valkur, when appropriate at this time)</dt>
+        <dt>GatherDC: (Valkur, when appropriate at this time)</dt>
         <dd>10 >= God of good winds. Mostly prayed to by sailors. Temples often function as lighthouses.</dd>
         <dd>15 >= A lesser God that is not very important in the pantheon. Often thought to be a pawn of greater Gods.</dd>
         <dd>25 >= Rumored to be aligned with Talos god of storms.</dd>
