--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/harbor/index.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/harbor/index.html
@@ -11,6 +11,11 @@
 {% endblock %}
 
 {% block locations %}
+    <p><b>
+        Many ships lie in the harbor on different piers.
+        In the middle of the harbor a big building rises. It seems to hold the resemblance of a woman in lead and glass.
+    </b></p>
+
     <p>
         The harbor as a place does not hold a lot of interesting sights.
         You can get to <a href="../temple-of-Waukeen.html">temple of Waukeen</a> from here.
