--- a/src/templatefiles/templates/dnd/concrete/places/big-ant-island/inland-right.html
+++ b/src/templatefiles/templates/dnd/concrete/places/big-ant-island/inland-right.html
@@ -1,6 +1,6 @@
 {% extends "dnd/abstract/place.html" %}
 
-{% block title %}Inland center{% endblock %}
+{% block title %}Inland right{% endblock %}
 {% block summary %}Ambush by stirges.{% endblock %}
 
 {% block events %}
