Update Talos temple to have a handout.

--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/temple-of-Talos.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/temple-of-Talos.html
@@ -4,7 +4,6 @@
 {% block summary %}Secret temple in Yauhnn for the God of Destruction.{% endblock %}
 
 {% block events %}
-    <h4>First time</h4>
     <p>When entering for the first time (through temple of Valkur), roll initiative and draw out the following situation.</p>
     <ol>
         <li>Adventures enter through curtains to a bigger cave.</li>
@@ -12,15 +11,15 @@
         <li>Many Locathah and half Locathah are watching the fight</li>
         <li><a href="../../../characters/Janala+talos-oracle.html">A female cleric</a> also stands on the altar and recognizes the adventurers as figures from the prophecy</li>
         <li>Everybody drops to their knees in worship</li>
-        <li>All wounds and taint is taken care off by <a href="../../../characters/Janala+talos-oracle.html">Janala</a></li>
     </ol>
 
-    <h4>Second time</h4>
-    <p>
-        When entering second time <a href="../../../characters/Janala+talos-oracle.html">Janala</a> explains her gifts.
-        Then offers a demonstration and does a definition.
-        "where ever the faithful suffer, Talos his work must be done"
-    </p>
+    <p>After this a talk with <a href="../../../characters/Janala+talos-oracle.html">Janala</a> follows.</p>
+    <ol>
+        <li>All wounds and taint is taken care off by <a href="../../../characters/Janala+talos-oracle.html">Janala</a></li>
+        <li>The entire slums are there to help.</li>
+        <li>As an Oracle of Talos she also offers any kind of service that you may need (dirty -> WillDC).</li>
+        <li>When you are rested tomorrow come and talk to her again in this temple.</li>
+    </ol>
 {% endblock %}
 
 {% block locations %}
@@ -42,6 +41,7 @@
         When entering first time proceed with
         <a href="../../../obstacles/03-poor-life-in-Yauhnn/00-exploring-the-city.html">exploring the city</a>
     </p>
+    <p>When entering the second time offer handout: 07-All-Janala's-request.odt</p>
 {% endblock %}
 
 {% block creatures %}
