Update traders-guild info.

--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/traders-guild.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/traders-guild.html
@@ -20,7 +20,7 @@
         <li>Imagine that you can dive that tax and cut on transportation cost.</li>
         <li>Your profit will hit the roof!</li>
 
-        <li>With a special teleportation device FTG is planning to teleport huge amounts of goods past custody at low cost.</li>
+        <li>With a revolutionary Golem the FTG is planning to teleport huge amounts of goods past custody at low cost.</li>
         <li>Goods are stored everywhere awaiting teleportation. Even in slums!</li>
     </ul>
 {% endblock %}
