Putting notes inside of chapters.

--- a/src/templatefiles/templates/dnd/concrete/obstacles/05-respectable-citizens/finding-dead-hulorn.html
+++ b/src/templatefiles/templates/dnd/concrete/obstacles/05-respectable-citizens/finding-dead-hulorn.html
@@ -1,1 +1,5 @@
 <p>Olivet will declare himself Hulorn by letting Lokahmee pose as Otalan</p>
+
+<p>In the past 3 (lead by Olivet) out of 7 were FTG. With the hulorn switching sides this became 4 out of 7
+This is of course not yet a 2/3 majority. However when the hulorn is found dead. Olivet will make Lokahmee pose as
+Otalan and declare himself hulorn with 2/3 majority (FTG being 4 out of 6 at that time)</p>
