Update todo for session 3

--- a/src/templatefiles/templates/dnd/concrete/obstacles/03-poor-life-in-Yauhnn/00-exploring-the-city.html
+++ b/src/templatefiles/templates/dnd/concrete/obstacles/03-poor-life-in-Yauhnn/00-exploring-the-city.html
@@ -15,7 +15,7 @@
         lets you know that the entire slums are there to help.
         As an Oracle of Talos she also offers any kind of service that you may need (dirty -> WillDC).
         You can find her in the Temple of Talos.
-        She hopes to speak tomorrow when you are more familiar with the city and she has done her prayers.
+        She hopes to speak tomorrow whenever it pleases you.
     </p>
 
     <p>
@@ -30,8 +30,9 @@
 
 {% block achievements %}
     <ul>
-        <li>Walking the slums reveals opportunities to <a href="01-earning-on-the-side.html">earn on the side</a></li>
-        <li>Visiting the market will lead to <a href="02-the-assassination.html">assassination attempt</a></li>
+        <li>Walking the slums reveals opportunities to <a href="01-earning-on-the-side.html">earn on the side</a>.</li>
+        <li>Visiting the market will lead to <a href="02-the-assassination.html">assassination attempt</a>.</li>
+        <li>Visiting Janala leads to <a href="A0-talk-to-Janala.html">a talk with Janala</a>.</li>
     </ul>
 {% endblock %}
 
