--- a/src/templatefiles/templates/dnd/concrete/obstacles/03-poor-life-in-Yauhnn/03-first-night-in-town.html
+++ b/src/templatefiles/templates/dnd/concrete/obstacles/03-poor-life-in-Yauhnn/03-first-night-in-town.html
@@ -12,8 +12,8 @@
     <p>Depending on whether they have heard from these places they can go:</p>
     <ul>
         <li>Visit the <a href="../../places/Yauhnn/slums-district/the-horrid-lust+pirate-inn.html">Horrid Lust</a></li>
-        <li>Visit the <a href="../../places/Yauhnn/trade-district/harbor/the-oceans-night+pleasure-house.html">Ocean's Lust</a>.</li>
-        <li>Visit the nightlife at <a href="../../places/Yauhnn/trade-district/the-guilds.html">the guilds</a></li>
+        <li>Visit the <a href="../../places/Yauhnn/trade-district/harbor/the-oceans-night+pleasure-house.html">Ocean's Night</a>.</li>
+        <li>Visit the nightlife at <a href="../../places/Yauhnn/trade-district/city-center.html">city center</a></li>
     </ul>
 {% endblock %}
 
