--- a/src/templatefiles/templates/dnd/concrete/obstacles/03-first-day-in-Yauhnn/02-the-assassination.html
+++ b/src/templatefiles/templates/dnd/concrete/obstacles/03-first-day-in-Yauhnn/02-the-assassination.html
@@ -14,7 +14,7 @@
     <ol>
         <li>
             A SpotDC20 will make adventurers notice somebody walking quick towards the temple as soon as the first punch hits.
-            SenseMotiveDC10 indicates he is up to something.
+            SenseMotiveDC10 indicates he is up to something. SenseMotiveDC15 to see that fist fight is a distraction.
         </li>
         <li>The person heads towards the elevator and becomes invisible there.</li>
         <li>The person takes 1 rounds to climb the ropes of the elevator</li>
