Add story for scrying Olivet on an evening.

--- a/src/templatefiles/templates/dnd/concrete/monsters/Pink-flower-tree+Rafanas-home.html
+++ b/src/templatefiles/templates/dnd/concrete/monsters/Pink-flower-tree+Rafanas-home.html
@@ -1,7 +1,7 @@
 {% extends "dnd/abstract/game_character.html" %}
 {% load staticfiles %}
 
-{% block name %}Pink Flower Tree{% endblock %}
+{% block name %}Pink Flower Tree (Taikon){% endblock %}
 {% block summary %}A preditorial tree that tries to make their victims fall asleep in its deadly flowers.{% endblock %}
 {% block motivation %}
     <p>Wants to feed itself to survive</p>
