--- a/src/templatefiles/templates/dnd/concrete/obstacles/03-first-day-in-Yauhnn/01-earning-on-the-side.html
+++ b/src/templatefiles/templates/dnd/concrete/obstacles/03-first-day-in-Yauhnn/01-earning-on-the-side.html
@@ -1,7 +1,7 @@
 {% extends "dnd/abstract/obstacle.html" %}
 
 {% block title %}Earning on the side{% endblock %}
-{% block summary %}Adventurers didn't find everything they need and could use some cash.{% endblock %}
+{% block summary %}Adventurers didn't find everything they need on the island and could use some cash.{% endblock %}
 
 {% block events %}
     <p>no events</p>
