--- a/src/templatefiles/templates/dnd/concrete/obstacles/03-first-day-in-Yauhnn/03-first-night-in-town.html
+++ b/src/templatefiles/templates/dnd/concrete/obstacles/03-first-day-in-Yauhnn/03-first-night-in-town.html
@@ -15,6 +15,10 @@
         <li>Visit the <a href="../../places/Yauhnn/trade-district/harbor/the-oceans-night+pleasure-house.html">Ocean's Night</a>.</li>
         <li>Visit the nightlife at <a href="../../places/Yauhnn/trade-district/city-center.html">city center</a></li>
     </ul>
+    <p>
+        Alternatively they can stay home and scry on Olivet leading to
+        <a href="D0-one-evening-at-Olivets.html">one evening at Olivet's</a>
+    </p>
 {% endblock %}
 
 {% block achievements %}
