--- a/src/templatefiles/templates/dnd/concrete/obstacles/03-first-day-in-Yauhnn/B1-mithral-cargo.html
+++ b/src/templatefiles/templates/dnd/concrete/obstacles/03-first-day-in-Yauhnn/B1-mithral-cargo.html
@@ -1,2 +1,3 @@
 <p>Bring fish from fish market through Morabars store to the poormans gate to the underdark and to the underground shaft leading to secret lab.</p>
 <p>Scrag troll?</p>
+<p>If they stop the delivery. Olivet has no choice but to buy mithral from Dragbar. This leads to whispers in the city about Dragbar dragging metals into the mine instead of out of it.</p>
