Change time interval for ritual.

--- a/src/templatefiles/templates/dnd/concrete/obstacles/03-first-day-in-Yauhnn/D0-one-evening-at-Olivets.html
+++ b/src/templatefiles/templates/dnd/concrete/obstacles/03-first-day-in-Yauhnn/D0-one-evening-at-Olivets.html
@@ -15,7 +15,7 @@
 {% endblock %}
 
 {% block achievements %}
-    <p>The clock starts counting. In one week the <a href="../05-respectable-citizens/the-secret-ritual.html">the secret ritual</a> takes place.</p>
+    <p>The clock starts counting. In 9 days the <a href="../05-respectable-citizens/the-secret-ritual.html">the secret ritual</a> takes place.</p>
 {% endblock %}
 
 {% block creatures %}
