The ocean's night.

--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/residence-district/north-side-nobles.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/residence-district/north-side-nobles.html
@@ -8,7 +8,7 @@
 {% endblock %}
 
 {% block locations %}
-    <p>no locations</p>
+    <p>Olivet appartment </p>
 {% endblock %}
 
 {% block achievements %}
