--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/the-goods.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/the-goods.html
@@ -53,7 +53,7 @@
         <dt>GatherDC:</dt>
         <dd>10 >= Warehouses are getting cramped. All eyes on the council to solve this problem.</dd>
         <dd>20 >= Lots of goods waiting to go to Cormyr</dd>
-        <dd>25 >= Plans to move people from the slums into a different area.</dd>
+        <dd>25 >= Plans to move people from the slums into a different area to get more storage space.</dd>
     </dl>
 {% endblock %}
 
