A little more gather info.

--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/harbor/the-oceans-night+pleasure-house.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/harbor/the-oceans-night+pleasure-house.html
@@ -79,16 +79,30 @@
 
 {% block knowledges %}
     <dl class="dc">
+        <dt>GatherDC: (general)</dt>
+        <dd>10 >= Ocean's lust used to be a war ship, but it was turned into a place where pleasure is traded instead. Make love and money not war.</dd>
+        <dd>15 >= Below deck you can find all entertainment a man needs. Booze, woman and high risk gambling. The captain's hut is only for very big players.</dd>
+        <dd>20 >= The hulorn has a bit of an addiction and he comes to play quite often. He can of course afford to loose some.</dd>
+    </dl>
+
+    <dl class="dc">
         <dt>GatherDC: (on deck, about the girl)</dt>
         <dd>15 >= Her eyes are as green as summer leaves.</dd>
-        <dd>18 >= She owns a perfume shop on the market and comes here often, but the man never shows his face.</dd>
+        <dd>18 >= She owns a perfume shop on the market and comes here often and only comes here with the hulorn.</dd>
+        <dd>20 >= Her business is going bankrupt, but she offers some services that pay her very well.</dd>
     </dl>
     <dl class="dc">
         <dt>GatherDC: (at high stakes about the girl)</dt>
-        <dd>15 >= The girl is Rafana, the sister of Olivet.</dd>
-        <dd>20 >= She plays in the captain's cabin.</dd>
+        <dd>15 >= She plays in the captain's cabin.</dd>
+        <dd>20 >= The girl is Rafana, the sister of Olivet.</dd>
         <dd>23 >= She's with the hulorn and she brings him luck, he has been winning a lot lately and others lost a lot.</dd>
         <dd>26 >= The girl and the hulorn are having an affair.</dd>
+    </dl>
+    <dl>
+        <dt>GatherDC: (at girls about the girl)</dt>
+        <dd>10 >= Her boobs are fake.</dd>
+        <dd>15 >= She doesn't know how to treat a man.</dd>
+        <dd>25 >= She has syphilis</dd>
     </dl>
 {% endblock %}
 
