--- a/src/templatefiles/templates/dnd/concrete/characters/Lokahmee+arch-mage.html
+++ b/src/templatefiles/templates/dnd/concrete/characters/Lokahmee+arch-mage.html
@@ -7,13 +7,13 @@ stats!
 {% block name %}Lokahmee{% endblock %}
 {% block summary %}
     Whizard, Archmage, who has fallen for the charms of <a href="Rafana+lady-of-the-pink-tree.html">Rafana</a> and helps
-    <a href="Olivet+magic-merchant.html">Olivet</a> to build his teleportation device.
+    <a href="Olivet+Magic-merchant.html">Olivet</a> to build his teleportation device.
 
 {% endblock %}
 
 {% block story %}
     <p>
-        <a href="Rafana+lady-of-the-pink-tree.html">Rafana</a> started to date with Lokahmee in Ardjanela and immediatelly liked the beautiful human girl.
+        <a href="Rafana+lady-of-the-pink-tree.html">Rafana</a> started to date with Lokahmee in Ardjanela and immediately liked the beautiful human girl.
         He always had a weakness for human females.
         <a href="Rafana+lady-of-the-pink-tree.html">Rafana</a> gave strong hints that she adored men who wear a certain perfume.
         This perfume was in fact poison to weaken his will and he fell for it.
@@ -25,10 +25,10 @@ stats!
         <li>The necklace I'm wearing is a sign for our love (in truth it is the cursed item that trumps his will)</li>
         <li>
             The device I'm working on is my wedding gift to Rafana
-            (in truth it is facilitating <a href="Olivet+magic-merchant.html">Olivet</a> to gain power)</li>
+            (in truth it is facilitating <a href="Olivet+Magic-merchant.html">Olivet</a> to gain power)</li>
         <li>
             I'm posing as hulorn to protect my family in law from merchant wolfs
-            (another favour for <a href="Olivet+magic-merchant.html">Olivet</a>)
+            (another favour for <a href="Olivet+Magic-merchant.html">Olivet</a>)
         </li>
     </ul>
 
