Bunch of updates to sketch out the noble area.

--- a/src/templatefiles/templates/dnd/concrete/groups/Yauhnn-merchant-council.html
+++ b/src/templatefiles/templates/dnd/concrete/groups/Yauhnn-merchant-council.html
@@ -19,7 +19,7 @@
             For very big decisions there has to be a 2/3 majority in the council.
         </dd>
         <dd>20 >= Head of Waukeen temple named <a href="../characters/Valof+Waukeen-cleric.html">Valor</a> has a seat in the council.</dd>
-        <dd>22 >= Hulorn is called <a href="../characters/Taduan+hulorn-animal-merchant.html">Taduann</a> and trades in cattle/animals.</dd>
+        <dd>22 >= Hulorn is called <a href="../characters/Taduan+hulorn-animal-merchant.html">Taduan</a> and trades in cattle/animals.</dd>
         <dd>24 >= <a href="../characters/Olivet+Magic-merchant.html">Olivet</a> is also part of the council.</dd>
         <dd>25 >= <a href="../characters/Otalan+food-and-drink-merchant.html">Otalan</a> is dealing in the finest food and drinks and is council member.</dd>
         <dd>26 >= <a href="../characters/Dragbar+metal-merchant.html">Dragbar</a> is a Gold Dwarf that ownes a lot of mines and smiths and is part of the council.</dd>
