--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/residence-district/captain-huts.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/residence-district/captain-huts.html
@@ -1,18 +1,32 @@
 {% extends "dnd/abstract/place.html" %} {# TODO: update #}
 
-{% block title %}No title{% endblock %}
-{% block summary %}No summary{% endblock %}
+{% block title %}Captain Huts{% endblock %}
+{% block summary %}The richest part of the city{% endblock %}
 
 {% block events %}
     <p>no events</p>
 {% endblock %}
 
 {% block locations %}
-    <p>no locations</p>
+    <p><b>
+        All houses in Yauhnn are relatively simple. The Sembians believe more in trade than in bricks.
+        However there are big differences between houses and the houses in this neighborhood clearly belong to the rich.
+        Their walled gardens and balconies face the sun. The houses are larger than any other in the city
+        and although the bricks are not ornamented, inside a lot art and other valuables are plain in sight.
+    </b></p>
+    <p>It is hard to distinguish one house from another and locations below can't be reached unless they know they want to go there.</p>
+    <ul>
+        <li>House of <a href="../../../characters/Taduan+hulorn-animal-merchant.html">Taduan (hulorn)</a></li>
+        <li>House of <a href="../../../characters/Dragbar+metal-merchant.html">Dragbar</a></li>
+        <li>House of <a href="../../../characters/Otalan+food-and-drink-merchant.html">Otalan</a></li>
+    </ul>
 {% endblock %}
 
 {% block achievements %}
-    <p>no achievements</p>
+    <p>
+        LEAD: surname of Dragbar sounds familiar, comes from gold dwarf settlement near Thunderpeak mine
+        LEAD: hulorn's wife feels miserable
+    </p>
 {% endblock %}
 
 {% block creatures %}
