--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/residence-district/dock-nobles.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/residence-district/dock-nobles.html
@@ -1,5 +1,7 @@
 {% extends "dnd/abstract/place.html" %} {# TODO: update #}
 
+{% block todo %}bad talk about the new-city{% endblock %}
+
 {% block title %}No title{% endblock %}
 {% block summary %}No summary{% endblock %}
 
