--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/residence-district/north-side-nobles.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/residence-district/north-side-nobles.html
@@ -2,13 +2,14 @@
 
 {% block title %}No title{% endblock %}
 {% block summary %}No summary{% endblock %}
+{% block todo %}statue of donkey, house of Wehna and Harar, FTG headquarters, accountants agency{% endblock %}
 
 {% block events %}
     <p>no events</p>
 {% endblock %}
 
 {% block locations %}
-    <p>Olivet appartment </p>
+    <p>no locations</p>
 {% endblock %}
 
 {% block achievements %}
