--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/residence-district/south-side-nobles.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/residence-district/south-side-nobles.html
@@ -2,6 +2,7 @@
 
 {% block title %}No title{% endblock %}
 {% block summary %}No summary{% endblock %}
+{% block todo %}appartment of Rafana, appartment of Morabar, Pomin's appartment{% endblock %}
 
 {% block events %}
     <p>no events</p>
