--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/harbor/the-oceans-night+pleasure-house.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/harbor/the-oceans-night+pleasure-house.html
@@ -58,6 +58,9 @@
         His name is Taduan Kaler. He runs a few businesses in animal life in Yauhnn and since a few years he has been elected as Hulorn of the city.
         He's especially interested in your opinions about trade and politics and their relation. He thinks that policy should never stand in the way of trade.
     </p>
+    <h4>About hulorns</h4>
+    <p>Roll on <a href="../../../../groups/Yauhnn-merchant-council.html">Yauhnn merchant council</a></p>
+
     <h4>Relationship</h4>
     <dl class="dc">
         <dt>SenseMotiveDC:</dt>
