--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/residence-district/northern-tower.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/residence-district/northern-tower.html
@@ -2,6 +2,7 @@
 
 {% block title %}No title{% endblock %}
 {% block summary %}No summary{% endblock %}
+{% block todo %}library{% endblock %}
 
 {% block events %}
     <p>no events</p>
